--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,6 @@
 <nav>
   <a href="/">Home</a>
+  <a href="/past">Past events</a>
   <a href="/sign-up">Sign up</a>
   <a href="/annotate">#annotate</a>
 </nav>
