--- a/src/pages/past.astro
+++ b/src/pages/past.astro
@@ -1,6 +1,105 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
+import highlights from '../images/spring-2022-highlights.jpg';
 ---
 <MainLayout>
-  <h1>Past events</h1>
+  <section>
+    <h2>Spring 2022</h2>
+    <p class="streamers">Streamers including,
+      <a href="https://twitch.tv/AmericanElm" target="_blank" class="streamer">AmericanElm</a>,
+      <a href="https://twitch.tv/Andrio_Celos" target="_blank" class="streamer">Andrio_Celos</a>,
+      <a href="https://twitch.tv/AntiGulp" target="_blank" class="streamer">AntiGulp</a>,
+      <a href="https://twitch.tv/aoeixsz4" target="_blank" class="streamer">aoeixsz4</a>,
+      <a href="https://twitch.tv/ashpooljohn" target="_blank" class="streamer">ashpooljohn</a>,
+      <a href="https://twitch.tv/Cloudmillion" target="_blank" class="streamer">Cloudmillion</a>,
+      <a href="https://twitch.tv/d_i_s_p_e_r_s_e" target="_blank" class="streamer">d_i_s_p_e_r_s_e</a>,
+      <a href="https://twitch.tv/finitelycraig" target="_blank" class="streamer">finitelycraig</a>,
+      <a href="https://twitch.tv/hackemslashem" target="_blank" class="streamer">hackemslashem</a>,
+      <a href="https://twitch.tv/HakureiDeity" target="_blank" class="streamer">HakureiDeity</a>,
+      <a href="https://twitch.tv/JJvanTheMan" target="_blank" class="streamer">JJvanTheMan</a>,
+      <a href="https://twitch.tv/KitsukoKi" target="_blank" class="streamer">KitsukoKi</a>,
+      <a href="https://twitch.tv/kougyoku_gentou" target="_blank" class="streamer">kougyoku_gentou</a>,
+      <a href="https://twitch.tv/Krump_O" target="_blank" class="streamer">Krump_O</a>,
+      <a href="https://twitch.tv/l__e__w" target="_blank" class="streamer">l__e__w</a>,
+      <a href="https://twitch.tv/lidlraccoon" target="_blank" class="streamer">lidlraccoon</a>,
+      <a href="https://twitch.tv/luxidream" target="_blank" class="streamer">luxidream</a>,
+      <a href="https://twitch.tv/PeteGoz" target="_blank" class="streamer">PeteGoz</a>,
+      <a href="https://twitch.tv/Priestess_of_Athe" target="_blank" class="streamer">Priestess_of_Athe</a>,
+      <a href="https://twitch.tv/shadowrider38" target="_blank" class="streamer">shadowrider38</a>,
+      <a href="https://twitch.tv/spazm9000" target="_blank" class="streamer">spazm9000</a>,
+      <a href="https://twitch.tv/Theyflower" target="_blank" class="streamer">Theyflower</a>,
+      and <a href="https://twitch.tv/toddrafter" target="_blank" class="streamer">toddrafter</a>.
+    </p>
+  </section>
+  <section>
+    <div>
+      <div style="position:relative; padding-top: 56.25%;">
+        <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                src="https://www.youtube-nocookie.com/embed/videoseries?list=PLChC_Y8sQL22DocizsU2MRGtd7N8R5k5u&origin=https://nethackathon.org"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+    </div>
+  </section>
+  <section class="c">
+    <h2>Spring 2022 Highlights</h2>
+    <img src={highlights} alt="Screenshot of Spring 2022 Highlights" style="width: 100%;" />
+  </section>
+  <secton class="c">
+    <div style="position:relative; padding-top: 56.25%;">
+      <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+              src="https://www.youtube-nocookie.com/embed/videoseries?list=PLChC_Y8sQL22QR0f4SWbcbCyGWKf9x8GU"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+    </div>
+  </secton>
+  <section class="a">
+    <h2>Fall 2021</h2>
+    <p class="streamers">Streamers including,
+      <a href="https://twitch.tv/ToneHack">ToneHack</a>,
+      <a href="https://twitch.tv/Cloudmillion">Cloudmillion</a>,
+      <a href="https://twitch.tv/JJvanTheMan">JJvanTheMan</a>,
+      <a href="https://twitch.tv/LythariDrow">LythariDrow</a>,
+      <a href="https://twitch.tv/Priestess_of_Athe">Priestess_of_Athe</a>,
+      <a href="https://twitch.tv/ichbinmiah">ichbinmiah</a>,
+      <a href="https://twitch.tv/AmericanElm">AmericanElm</a>,
+      <a href="https://twitch.tv/KitsukoKi">KitsukoKi</a>,
+      <a href="https://twitch.tv/watchingugo">watchingugo</a>,
+      <a href="https://twitch.tv/luxidream">luxidream</a>,
+      <a href="https://twitch.tv/PeteGoz">PeteGoz</a>,
+      <a href="https://twitch.tv/Antigulp">Antigulp</a>,
+      <a href="https://twitch.tv/Diggitysc">Diggitysc</a>,
+      <a href="https://twitch.tv/toddrafter">toddrafter</a>,
+      <a href="https://twitch.tv/ashpooljohn">ashpooljohn</a>,
+      <a href="https://twitch.tv/finitelycraig">finitelycraig</a>,
+      <a href="https://twitch.tv/QueenXerxes">QueenXerxes</a>,
+      <a href="https://twitch.tv/theyflower">theyflower</a>,
+      <a href="https://twitch.tv/d_i_s_p_e_r_s_e">d_i_s_p_e_r_s_e</a>, and
+      <a href="https://twitch.tv/shadowrider38">shadowrider38</a>.
+    </p>
+  </section>
+  <section class="a">
+    <div>
+      <div style="position:relative; padding-top: 56.25%;">
+        <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                src="https://www.youtube-nocookie.com/embed/videoseries?list=PLChC_Y8sQL214ruTt5t6eKeu0Z2Y_BZgu"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+    </div>
+  </section>
 </MainLayout>
+
+<style>
+  .streamers a {
+    text-decoration: none;
+    font-weight: normal;
+  }
+
+  .streamers a:hover {
+    text-decoration: underline;
+  }
+</style>
