--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,16 +8,13 @@ import screenshot from '../images/nethack-screenshot.png';
     <p>NetHackathon is an event where Twitch content creators stream NetHack continuously
       for over 48 hours.</p>
   </section>
-  <section>
-    <h2 style="margin-bottom: 0;">The Spring 2022 Event</h2>
-    <div>
-      <div style="position:relative; padding-top: 56.25%;">
-        <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLChC_Y8sQL22DocizsU2MRGtd7N8R5k5u&origin=https://nethackathon.org" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-    </div>
-  </section>
-  <section style="padding: 0.5em;" aria-label="NetHack screenshot">
-    <img src={screenshot} alt="Screenshot of NetHack" style="width: 100%;" />
+  <section class="a">
+    <h2 style="margin-bottom: 0;">The Fall 2022 Event</h2>
+    <p>We're currently looking for streamers for the next event to be held the weekend of
+    <strong class="a">September 16th - 18th</strong>.</p>
+    <p>
+      <a href="sign-up">Sign-up as a streamer today!</a>
+    </p>
   </section>
   <section class="c">
     <h2>What is NetHack?</h2>
@@ -25,10 +22,13 @@ import screenshot from '../images/nethack-screenshot.png';
       Rogue of rogue-like, and <a href="https://www.thegreatestgameyouwilleverplay.com/">the
         greatest game you will ever play.</a></p>
   </section>
+  <section style="padding: 0.5em;" aria-label="NetHack screenshot">
+    <img src={screenshot} alt="Screenshot of NetHack" style="width: 100%;" />
+  </section>
   <section>
     <h2>When is the next event?</h2>
     <p>We run the event twice a year, in the spring and fall, the next event will be held
-      in September 2022.</p>
+      the weekend of September 16th - 18th.</p>
   </section>
   <section>
     <h2>Do you play NetHack?</h2>
