--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import screenshot from '../images/nethack-screenshot.png';
 ---
-<MainLayout>
+<MainLayout homeClass="active" pastClass="inactive">
   <section class="a">
     <h2>What is NetHackathon?</h2>
     <p>NetHackathon is an event where Twitch content creators stream NetHack continuously
