Added current event page with schedule, created ascensions/deaths/livelog componenets.

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,8 +1,9 @@
 ---
-const { homeClass, pastClass } = Astro.props;
+const { homeClass, pastClass, currentClass } = Astro.props;
 ---
 <nav>
-  <a class={homeClass} href="/">Home</a>
+  <a class={currentClass} href="/">Current event</a>
+  <a class={homeClass} href="/about">About</a>
   <a class={pastClass} href="/past">Past events</a>
   <a href="/sign-up">Sign up</a>
   <a href="/annotate">#annotate</a>
