--- a/src/pages/past.astro
+++ b/src/pages/past.astro
@@ -2,7 +2,7 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import highlights from '../images/spring-2022-highlights.jpg';
 ---
-<MainLayout homeClass="inactive" pastClass="active">
+<MainLayout pastClass="active">
   <section>
     <h2>Spring 2022</h2>
     <p class="streamers">Streamers including,
