--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -1,15 +1,16 @@
 ---
 import { DateTime, Info } from "luxon";
+import type { Streamer } from "../interfaces/streamer";
 
-function formatStartTime(start) {
+function formatStartTime(start: string) {
   const dateTime = DateTime.fromMillis(parseInt(start)).toUTC();
   return `${Info.weekdays()[dateTime.weekday - 1]}, ${dateTime.toLocaleString(DateTime.TIME_SIMPLE)}`;
 }
 
 const response = await fetch('https://api.nethackathon.org/schedule');
 const data = await response.json();
-const streamers = data.streamers.sort((a, b) => {
-  return a.start_time - b.start_time;
+const streamers = data.streamers.sort((a: Streamer, b: Streamer) => {
+  return a.start_time.localeCompare(b.start_time);
 });
 
 ---
@@ -24,10 +25,10 @@ const streamers = data.streamers.sort((a, b) => {
     </tr>
   </thead>
   <tbody>
-  {streamers.sort().map((streamer) => (
+  {streamers.sort().map((streamer: Streamer) => (
     <tr>
       <td class="start-time" data-ts={streamer.start_time}>{formatStartTime(streamer.start_time)}</td>
-      <td><a href=`https://twitch.tv/${streamer.username}`>{streamer.username}</a></td>
+      <td><a href={`https://twitch.tv/${streamer.username}`}>{streamer.username}</a></td>
       <td>{(streamer.notes) ? streamer.notes : ''}</td>
     </tr>
   ))}
@@ -58,6 +59,8 @@ const streamers = data.streamers.sort((a, b) => {
   import { DateTime, Info } from "luxon";
 
   window.addEventListener('load', () => {
+    const timeZone = document.getElementById('time-zone');
+    if (!timeZone) return;
     const tds = document.getElementsByClassName('start-time');
     let lastDay = '';
     for (let i = 0; i < tds.length; i++) {
@@ -67,6 +70,6 @@ const streamers = data.streamers.sort((a, b) => {
       lastDay = day;
       tds[i].innerHTML = `<div style="width: 6em; display: inline-block; color: rgb(234, 51, 247); font-weight: bold;" class="day">${dayString}</div> ${dateTime.toLocaleString(DateTime.TIME_SIMPLE)}`;
     }
-    document.getElementById('time-zone').innerHTML = DateTime.local().offsetNameShort;
+    timeZone.innerHTML = DateTime.local().offsetNameShort;
   });
 </script>
