--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -9,11 +9,11 @@ import screenshot from '../../images/nethack-screenshot.png';
       for over 48 hours.</p>
   </section>
   <section class="a">
-    <h2 style="margin-bottom: 0;">The Fall 2022 Event</h2>
+    <h2 style="margin-bottom: 0;">The Spring 2023 Event</h2>
     <p>We're currently looking for streamers for the next event to be held the weekend of
-    <strong class="a">September 16th - 18th</strong>.</p>
+    <strong class="a">April 14th - 16th</strong>.</p>
     <p>
-      <a href="../sign-up">Sign-up as a streamer today!</a>
+      <a href="https://discord.gg/ufk5DgZQQQ">Join our Discord server for more information!</a>
     </p>
   </section>
   <section class="c">
@@ -28,13 +28,13 @@ import screenshot from '../../images/nethack-screenshot.png';
   <section>
     <h2>When is the next event?</h2>
     <p>We run the event twice a year, in the spring and fall, the next event will be held
-      the weekend of September 16th - 18th.</p>
+      the weekend of April 14th - 16th.</p>
   </section>
   <section>
     <h2>Do you play NetHack?</h2>
     <p>Are you a Twitch Streamer? We're looking for people to play NetHack on stream, the
       time commitment is two hours at a time of your choosing during a weekend.</p>
-    <p>To participate in future events <a href="/sign-up">sign up as a streamer today!</a></p>
+    <!--p>To participate in future events <a href="/sign-up">sign up as a streamer today!</a></p-->
   </section>
   <section class="a double">
     <h2>What is #annotate?</h2>
