--- a/src/pages/past.astro
+++ b/src/pages/past.astro
@@ -3,6 +3,43 @@ import MainLayout from '../layouts/MainLayout.astro';
 import highlights from '../images/spring-2022-highlights.jpg';
 ---
 <MainLayout pastClass="active">
+  <section class="a">
+    <h2>Fall 2022</h2>
+    <p class="streamers">Streamers including,
+      <a href="https://twitch.tv/AmericanElm" target="_blank" class="streamer">AmericanElm</a>,
+      <a href="https://twitch.tv/Andrio_Celos" target="_blank" class="streamer">Andrio_Celos</a>,
+      <a href="https://twitch.tv/AntiGulp" target="_blank" class="streamer">AntiGulp</a>,
+      <a href="https://twitch.tv/ashpool37" target="_blank" class="streamer">ashpool37</a>,
+      <a href="https://twitch.tv/Cloudmillion" target="_blank" class="streamer">Cloudmillion</a>,
+      <a href="https://twitch.tv/doktor__l" target="_blank" class="streamer">doktor__l</a>,
+      <a href="https://twitch.tv/DryadMin" target="_blank" class="streamer">DryadMin</a>,
+      <a href="https://twitch.tv/d_i_s_p_e_r_s_e" target="_blank" class="streamer">d_i_s_p_e_r_s_e</a>,
+      <a href="https://twitch.tv/finitelycraig" target="_blank" class="streamer">finitelycraig</a>,
+      <a href="https://twitch.tv/HakureiDeity" target="_blank" class="streamer">HakureiDeity</a>,
+      <a href="https://twitch.tv/JJvanTheMan" target="_blank" class="streamer">JJvanTheMan</a>,
+      <a href="https://twitch.tv/jonosmalls88" target="_blank" class="streamer">jonosmalls88</a>,
+      <a href="https://twitch.tv/KwotaV" target="_blank" class="streamer">KwotaV</a>,
+      <a href="https://twitch.tv/luxidream" target="_blank" class="streamer">luxidream</a>,
+      <a href="https://twitch.tv/LythariDrow" target="_blank" class="streamer">LythariDrow</a>,
+      <a href="https://twitch.tv/NabruRocks" target="_blank" class="streamer">NabruRocks</a>,
+      <a href="https://twitch.tv/PeteGoz" target="_blank" class="streamer">PeteGoz</a>,
+      <a href="https://twitch.tv/Priestess_of_Athe" target="_blank" class="streamer">Priestess_of_Athe</a>,
+      <a href="https://twitch.tv/shadowrider38" target="_blank" class="streamer">shadowrider38</a>,
+      <a href="https://twitch.tv/spazm9000" target="_blank" class="streamer">spazm9000</a>,
+      <a href="https://twitch.tv/Theyflower" target="_blank" class="streamer">Theyflower</a>,
+      <a href="https://twitch.tv/TiLonGonn" target="_blank" class="streamer">TiLonGonn</a>,
+      <a href="https://twitch.tv/TiraBlazar" target="_blank" class="streamer">TiraBlazar</a>,
+      <a href="https://twitch.tv/toddrafter" target="_blank" class="streamer">toddrafter</a>.
+      <a href="https://twitch.tv/Unit327" target="_blank" class="streamer">Unit327</a>.
+    </p>
+  </section>
+  <section class="a">
+    <div>
+      <div style="position:relative; padding-top: 56.25%;">
+        <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLChC_Y8sQL20b___7vvRlRQbKBuNf4dAx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+    </div>
+  </section>
   <section>
     <h2>Spring 2022</h2>
     <p class="streamers">Streamers including,
@@ -58,26 +95,26 @@ import highlights from '../images/spring-2022-highlights.jpg';
   <section class="a">
     <h2>Fall 2021</h2>
     <p class="streamers">Streamers including,
-      <a href="https://twitch.tv/ToneHack">ToneHack</a>,
-      <a href="https://twitch.tv/Cloudmillion">Cloudmillion</a>,
-      <a href="https://twitch.tv/JJvanTheMan">JJvanTheMan</a>,
-      <a href="https://twitch.tv/LythariDrow">LythariDrow</a>,
-      <a href="https://twitch.tv/Priestess_of_Athe">Priestess_of_Athe</a>,
-      <a href="https://twitch.tv/ichbinmiah">ichbinmiah</a>,
       <a href="https://twitch.tv/AmericanElm">AmericanElm</a>,
-      <a href="https://twitch.tv/KitsukoKi">KitsukoKi</a>,
-      <a href="https://twitch.tv/watchingugo">watchingugo</a>,
-      <a href="https://twitch.tv/luxidream">luxidream</a>,
-      <a href="https://twitch.tv/PeteGoz">PeteGoz</a>,
       <a href="https://twitch.tv/Antigulp">Antigulp</a>,
+      <a href="https://twitch.tv/Cloudmillion">Cloudmillion</a>,
       <a href="https://twitch.tv/Diggitysc">Diggitysc</a>,
-      <a href="https://twitch.tv/toddrafter">toddrafter</a>,
-      <a href="https://twitch.tv/ashpooljohn">ashpooljohn</a>,
-      <a href="https://twitch.tv/finitelycraig">finitelycraig</a>,
+      <a href="https://twitch.tv/JJvanTheMan">JJvanTheMan</a>,
+      <a href="https://twitch.tv/KitsukoKi">KitsukoKi</a>,
+      <a href="https://twitch.tv/LythariDrow">LythariDrow</a>,
+      <a href="https://twitch.tv/PeteGoz">PeteGoz</a>,
+      <a href="https://twitch.tv/Priestess_of_Athe">Priestess_of_Athe</a>,
       <a href="https://twitch.tv/QueenXerxes">QueenXerxes</a>,
-      <a href="https://twitch.tv/theyflower">theyflower</a>,
+      <a href="https://twitch.tv/ToneHack">ToneHack</a>,
+      <a href="https://twitch.tv/ashpooljohn">ashpooljohn</a>,
       <a href="https://twitch.tv/d_i_s_p_e_r_s_e">d_i_s_p_e_r_s_e</a>, and
+      <a href="https://twitch.tv/finitelycraig">finitelycraig</a>,
+      <a href="https://twitch.tv/ichbinmiah">ichbinmiah</a>,
+      <a href="https://twitch.tv/luxidream">luxidream</a>,
       <a href="https://twitch.tv/shadowrider38">shadowrider38</a>.
+      <a href="https://twitch.tv/theyflower">theyflower</a>,
+      <a href="https://twitch.tv/toddrafter">toddrafter</a>,
+      <a href="https://twitch.tv/watchingugo">watchingugo</a>,
     </p>
   </section>
   <section class="a">
