--- a/src/pages/past.astro
+++ b/src/pages/past.astro
@@ -29,7 +29,7 @@ import highlights from '../images/spring-2022-highlights.jpg';
       <a href="https://twitch.tv/Theyflower" target="_blank" class="streamer">Theyflower</a>,
       <a href="https://twitch.tv/TiLonGonn" target="_blank" class="streamer">TiLonGonn</a>,
       <a href="https://twitch.tv/TiraBlazar" target="_blank" class="streamer">TiraBlazar</a>,
-      <a href="https://twitch.tv/toddrafter" target="_blank" class="streamer">toddrafter</a>.
+      <a href="https://twitch.tv/toddrafter" target="_blank" class="streamer">toddrafter</a>, and
       <a href="https://twitch.tv/Unit327" target="_blank" class="streamer">Unit327</a>.
     </p>
   </section>
@@ -107,14 +107,14 @@ import highlights from '../images/spring-2022-highlights.jpg';
       <a href="https://twitch.tv/QueenXerxes">QueenXerxes</a>,
       <a href="https://twitch.tv/ToneHack">ToneHack</a>,
       <a href="https://twitch.tv/ashpooljohn">ashpooljohn</a>,
-      <a href="https://twitch.tv/d_i_s_p_e_r_s_e">d_i_s_p_e_r_s_e</a>, and
+      <a href="https://twitch.tv/d_i_s_p_e_r_s_e">d_i_s_p_e_r_s_e</a>, 
       <a href="https://twitch.tv/finitelycraig">finitelycraig</a>,
       <a href="https://twitch.tv/ichbinmiah">ichbinmiah</a>,
       <a href="https://twitch.tv/luxidream">luxidream</a>,
-      <a href="https://twitch.tv/shadowrider38">shadowrider38</a>.
+      <a href="https://twitch.tv/shadowrider38">shadowrider38</a>,
       <a href="https://twitch.tv/theyflower">theyflower</a>,
-      <a href="https://twitch.tv/toddrafter">toddrafter</a>,
-      <a href="https://twitch.tv/watchingugo">watchingugo</a>,
+      <a href="https://twitch.tv/toddrafter">toddrafter</a>, and
+      <a href="https://twitch.tv/watchingugo">watchingugo</a>.
     </p>
   </section>
   <section class="a">
