--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -1,14 +1,13 @@
 ---
 import { DateTime, Info } from "luxon";
 import type { Streamer } from "../interfaces/streamer";
+import { data } from "../data/schedule";
 
 function formatStartTime(start: string) {
   const dateTime = DateTime.fromMillis(parseInt(start)).toUTC();
   return `${Info.weekdays()[dateTime.weekday - 1]}, ${dateTime.toLocaleString(DateTime.TIME_SIMPLE)}`;
 }
 
-const response = await fetch('https://api.nethackathon.org/schedule');
-const data = await response.json();
 const streamers = data.streamers.sort((a: Streamer, b: Streamer) => {
   return a.start_time.localeCompare(b.start_time);
 });
