--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -10,11 +10,12 @@ import screenshot from '../../images/nethack-screenshot.png';
   </section>
   <section class="a">
     <h2 style="margin-bottom: 0;">The Spring 2023 Event</h2>
-    <p>We're currently looking for streamers for the next event to be held the weekend of
+    <p>The next event will be held the weekend of April 14 - 16th, for more information go to the <a href="/">Current event</a> page.</p>
+    <!--p>We're currently looking for streamers for the next event to be held the weekend of
     <strong class="a">April 14th - 16th</strong>.</p>
     <p>
-      <a href="https://discord.gg/ufk5DgZQQQ">Join our Discord server for more information!</a>
-    </p>
+      <a href="/sign-up">Sign up today!</a>
+    </p-->
   </section>
   <section class="c">
     <h2>What is NetHack?</h2>
