--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,14 +11,22 @@ const eventLive = false;
 ---
 <MainLayout currentClass="active">
   <Countdown />
-  {eventLive && 
-  <CurrentStreamer />
+  <!--section class="double c">
+    <h2 style="margin-bottom: 0;">The Spring 2023 Event</h2>
+    <p>We're currently looking for streamers for the next event to be held the weekend of
+      <strong class="c">April 14th - 16th</strong>.</p>
+    <p>
+      <a href="/sign-up">Sign up today!</a>
+    </p>
+  </section-->
   <section class="double b">
     <Streamers />
   </section>
   <section class="double c">
     <Schedule />
   </section>
+  {eventLive &&
+  <CurrentStreamer />
   <AscensionsDeaths />
   <Livelog />
   }
