--- a/src/components/CurrentStreamer.astro
+++ b/src/components/CurrentStreamer.astro
@@ -10,13 +10,14 @@
 </style>
 
 <script>
+  import { data } from "../data/schedule";
   import { DateTime } from "luxon";
   import type { Streamer } from "../interfaces/streamer";
-  const startDate = DateTime.fromISO('2022-09-16T22:00:00.000', {zone: 'utc'});
+  const startDate = DateTime.fromISO('2023-04-14T17:00:00.000', {zone: 'utc'});
   function getCurrentStreamer(schedule: Streamer[]) {
     const currentStreamerSection = document.getElementById('current-streamer');
     if (!currentStreamerSection) return;
-    const eventStarted = (DateTime.now() >= startDate);
+    const eventStarted = (DateTime.now().ts >= startDate.toMillis());
     if (eventStarted) {
       currentStreamerSection.style.display = 'block';
     } else {
@@ -52,8 +53,6 @@
     }
   }
   window.addEventListener('load', async () => {
-    const response = await fetch('https://api.nethackathon.org/schedule');
-    const data = await response.json();
     const schedule = data.streamers.sort((a: Streamer, b: Streamer) => {
       return a.start_time.localeCompare(b.start_time);
     });
