--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,7 +5,7 @@ const { homeClass, pastClass, currentClass } = Astro.props;
   <a class={currentClass} href="/">Current event</a>
   <a class={homeClass} href="/about">About</a>
   <a class={pastClass} href="/past">Past events</a>
-  <!--a href="/sign-up">Sign up</a-->
+  <a href="/sign-up">Sign up</a>
   <a href="/annotate">#annotate</a>
 </nav>
 
