--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -9,13 +9,13 @@ import screenshot from '../../images/nethack-screenshot.png';
       for over 48 hours.</p>
   </section>
   <section class="a">
-    <h2 style="margin-bottom: 0;">The Spring 2023 Event</h2>
-    <p>The next event will be held the weekend of April 14 - 16th, for more information go to the <a href="/">Current event</a> page.</p>
-    <!--p>We're currently looking for streamers for the next event to be held the weekend of
-    <strong class="a">April 14th - 16th</strong>.</p>
+    <h2 style="margin-bottom: 0;">The Fall 2023 Event</h2>
+    <!--p>The next event will be held the weekend of April 14 - 16th, for more information go to the <a href="/">Current event</a> page.</p-->
+    <p>We're currently looking for streamers for the next event to be held the weekend of
+    <strong class="a">September 8th - 10th</strong>.</p>
     <p>
       <a href="/sign-up">Sign up today!</a>
-    </p-->
+    </p>
   </section>
   <section class="c">
     <h2>What is NetHack?</h2>
@@ -29,13 +29,13 @@ import screenshot from '../../images/nethack-screenshot.png';
   <section>
     <h2>When is the next event?</h2>
     <p>We run the event twice a year, in the spring and fall, the next event will be held
-      the weekend of April 14th - 16th.</p>
+      the weekend of September 8th - 10th.</p>
   </section>
   <section>
     <h2>Do you play NetHack?</h2>
     <p>Are you a Twitch Streamer? We're looking for people to play NetHack on stream, the
       time commitment is two hours at a time of your choosing during a weekend.</p>
-    <!--p>To participate in future events <a href="/sign-up">sign up as a streamer today!</a></p-->
+    <p>To participate in future events <a href="/sign-up">sign up as a streamer today!</a></p>
   </section>
   <section class="a double">
     <h2>What is #annotate?</h2>
