--- a/src/pages/past.astro
+++ b/src/pages/past.astro
@@ -3,6 +3,33 @@ import MainLayout from '../layouts/MainLayout.astro';
 import highlights from '../images/spring-2022-highlights.jpg';
 ---
 <MainLayout pastClass="active">
+  <section class="double c">
+    <h2>Spring 2023</h2>
+    <p class="streamers">Streamers including,
+      <a href="https://twitch.tv/AmericanElm" target="_blank" class="streamer">AmericanElm</a>,
+      <a href="https://twitch.tv/Andrio_Celos" target="_blank" class="streamer">Andrio_Celos</a>,
+      <a href="https://twitch.tv/AntiGulp" target="_blank" class="streamer">AntiGulp</a>,
+      <a href="https://twitch.tv/Cloudmillion" target="_blank" class="streamer">Cloudmillion</a>,
+      <a href="https://twitch.tv/d_i_s_p_e_r_s_e" target="_blank" class="streamer">d_i_s_p_e_r_s_e</a>,
+      <a href="https://twitch.tv/DryadMin" target="_blank" class="streamer">DryadMin</a>,
+      <a href="https://twitch.tv/finitelycraig" target="_blank" class="streamer">finitelycraig</a>,
+      <a href="https://twitch.tv/hackemslashem" target="_blank" class="streamer">hackemslashem</a>,
+      <a href="https://twitch.tv/HakureiDeity" target="_blank" class="streamer">HakureiDeity</a>,
+      <a href="https://twitch.tv/JJvanTheMan" target="_blank" class="streamer">JJvanTheMan</a>,
+      <a href="https://twitch.tv/jonosmalls88" target="_blank" class="streamer">jonosmalls88</a>,
+      <a href="https://twitch.tv/lexi_milch" target="_blank" class="streamer">lexi_milch</a>,
+      <a href="https://twitch.tv/lidlraccoon" target="_blank" class="streamer">lidlraccoon</a>,
+      <a href="https://twitch.tv/luxidream" target="_blank" class="streamer">luxidream</a>,
+      <a href="https://twitch.tv/LythariDrow" target="_blank" class="streamer">LythariDrow</a>,
+      <a href="https://twitch.tv/MajinBird" target="_blank" class="streamer">MajinBird</a>,
+      <a href="https://twitch.tv/NabruRocks" target="_blank" class="streamer">NabruRocks</a>,
+      <a href="https://twitch.tv/PeteGoz" target="_blank" class="streamer">PeteGoz</a>,
+      <a href="https://twitch.tv/Priestess_of_Athe" target="_blank" class="streamer">Priestess_of_Athe</a>,
+      <a href="https://twitch.tv/spazm9000" target="_blank" class="streamer">spazm9000</a>,
+      <a href="https://twitch.tv/Theyflower" target="_blank" class="streamer">Theyflower</a>,
+      <a href="https://twitch.tv/Unit327" target="_blank" class="streamer">Unit327</a>.
+    </p>
+  </section>
   <section class="a">
     <h2>Fall 2022</h2>
     <p class="streamers">Streamers including,
@@ -107,7 +134,7 @@ import highlights from '../images/spring-2022-highlights.jpg';
       <a href="https://twitch.tv/QueenXerxes">QueenXerxes</a>,
       <a href="https://twitch.tv/ToneHack">ToneHack</a>,
       <a href="https://twitch.tv/ashpooljohn">ashpooljohn</a>,
-      <a href="https://twitch.tv/d_i_s_p_e_r_s_e">d_i_s_p_e_r_s_e</a>, 
+      <a href="https://twitch.tv/d_i_s_p_e_r_s_e">d_i_s_p_e_r_s_e</a>,
       <a href="https://twitch.tv/finitelycraig">finitelycraig</a>,
       <a href="https://twitch.tv/ichbinmiah">ichbinmiah</a>,
       <a href="https://twitch.tv/luxidream">luxidream</a>,
