--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,6 +7,7 @@ const { homeClass, pastClass, currentClass } = Astro.props;
   <a class={pastClass} href="/past">Past events</a>
   <a href="/sign-up">Sign up</a>
   <a href="/annotate">#annotate</a>
+  <a href="/help">#help</a>
 </nav>
 
 <style>
