Updated schedule, removed sign-up links.

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -10,12 +10,12 @@ import screenshot from '../../images/nethack-screenshot.png';
   </section>
   <section class="a">
     <h2 style="margin-bottom: 0;">The Fall 2023 Event</h2>
-    <!--p>The next event will be held the weekend of April 14 - 16th, for more information go to the <a href="/">Current event</a> page.</p-->
-    <p>We're currently looking for streamers for the next event to be held the weekend of
+    <p>The next event will be held the weekend of September 8 - 10th, for more information go to the <a href="/">Current event</a> page.</p>
+    <!--p>We're currently looking for streamers for the next event to be held the weekend of
     <strong class="a">September 8th - 10th</strong>.</p>
     <p>
       <a href="/sign-up">Sign up today!</a>
-    </p>
+    </p!-->
   </section>
   <section class="c">
     <h2>What is NetHack?</h2>
