--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,20 +12,20 @@ const eventLive = false;
 <MainLayout currentClass="active">
   <Countdown />
   <CurrentStreamer />
-  <section class="double c">
+  <!--section class="double c">
     <h2 style="margin-bottom: 0;">The Fall 2023 Event</h2>
     <p>We're currently looking for streamers for the next event to be held the weekend of
       <strong class="c">September 8th - 10th</strong>.</p>
     <p>
       <a href="/sign-up">Sign up today!</a>
     </p>
-  </section>
-  <!--section class="double b">
+  </section-->
+  <section class="double b">
     <Streamers />
-  </section-->
-  <!--section class="double c">
+  </section>
+  <section class="double c">
     <Schedule />
-  </section-->
+  </section>
   <!--AscensionsDeaths /-->
   <!--Livelog /-->
 </MainLayout>
