--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,9 +5,15 @@ const { homeClass, pastClass, currentClass } = Astro.props;
   <a class={currentClass} href="/">Current event</a>
   <a class={homeClass} href="/about">About</a>
   <a class={pastClass} href="/past">Past events</a>
+  <a class={pastClass} href="/charity">Charity</a>
   <!--a href="/sign-up">Sign up</a-->
   <a href="/annotate">#annotate</a>
 </nav>
+<p class="charity">
+  <a class="charity-link" href="https://www.justgiving.com/page/nethackathon" target="_blank">
+    We're supporting Girls Who Code, donate now!
+  </a>
+</p>
 
 <style>
   @media (prefers-color-scheme: dark) {
@@ -32,5 +38,14 @@ const { homeClass, pastClass, currentClass } = Astro.props;
   }
   nav a.active {
     color: var(--color-a);
+  }
+  .charity {
+    text-align: center;
+    margin: 0;
+  }
+  .charity-link {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: var(--color-c);
   }
 </style>
