--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,8 @@ const eventLive = false;
   <section class="double c">
     <Schedule />
   </section>
-  <!--AscensionsDeaths /-->
-  <!--Livelog /-->
+  <AscensionsDeaths />
+  <Livelog />
 </MainLayout>
 
 <style>
