--- a/src/pages/charity/index.astro
+++ b/src/pages/charity/index.astro
@@ -1,7 +1,7 @@
 ---
 import MainLayout from '../../layouts/MainLayout.astro';
 ---
-<MainLayout homeClass="active">
+<MainLayout currentPage="charity">
   <section class="a double">
     <h2>NetHackathon and Charity</h2>
     <p>For the first time this NetHackathon, and for each event moving forward, we are going to choose a charity to
