--- a/src/pages/help/index.astro
+++ b/src/pages/help/index.astro
@@ -2,7 +2,7 @@
 import MainLayout from "../../layouts/MainLayout.astro";
 ---
 
-<MainLayout>
+<MainLayout currentPage = "help">
   <section class="a double">
     <h2>Streamer FAQ</h2>
     <p>If you have any questions that are not answered here, ask on the #nethackathon-tech channel of the
