--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Livelog from '../components/Livelog.astro';
 
 const eventLive = false;
 ---
-<MainLayout currentClass="active">
+<MainLayout currentPage="home">
   <Countdown />
   <CurrentStreamer />
   <!--section class="double c">
