--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,12 +1,19 @@
 ---
-const { homeClass, pastClass, currentClass } = Astro.props;
+
+const { currentEvent, lastEvent, currentPage } = Astro.props;
+const now = new Date();
+const signUpsOpen = (
+  (now > new Date(currentEvent.signup_start)) &&
+  (now < new Date(currentEvent.signup_end))
+);
+
 ---
 <nav>
-  <a class={currentClass} href="/">Current event</a>
-  <a class={homeClass} href="/about">About</a>
-  <a class={pastClass} href="/past">Past events</a>
-  <a class={pastClass} href="/charity">Charity</a>
-  <!--a href="/sign-up">Sign up</a-->
+  <a class={(currentPage === 'home') ? 'active' : ''} href="/">Current event</a>
+  <a class={(currentPage === 'about') ? 'active' : ''} href="/about">About</a>
+  <a class={(currentPage === 'past') ? 'active' : ''} href={"/past/" + lastEvent.id}>Past events</a>
+  <a class={(currentPage === 'charity') ? 'active' : ''} href="/charity">Charity</a>
+  {signUpsOpen && <a href="/sign-up">Sign up</a>}
   <a href="/annotate">#annotate</a>
 </nav>
 <p class="charity">
@@ -16,29 +23,6 @@ const { homeClass, pastClass, currentClass } = Astro.props;
 </p>
 
 <style>
-  @media (prefers-color-scheme: dark) {
-    nav a:hover {
-      background-color: var(--color-dark-highlight);
-    }
-  }
-  @media (prefers-color-scheme: light) {
-    nav a:hover {
-      background-color: var(--color-light-highlight);
-    }
-  }
-  nav {
-    min-height: 48px;
-  }
-  nav a {
-    display: inline-block;
-    line-height: 48px;
-    height: 48px;
-    font-size: x-large;
-    padding: 0 1em;
-  }
-  nav a.active {
-    color: var(--color-a);
-  }
   .charity {
     text-align: center;
     margin: 0;
